resolve conflict - keep task files